# sitar

./: README.md
background/sitar-in-perl/: sitar.pl
code/go/: Containerfile  LICENSE  Makefile  README.md  TRANSLATION_REPORT.md  collect.go  collect_config.go  collect_hw.go  collect_network.go  collect_pkg.go  collect_storage.go  detect.go  go.mod  interfaces.go  main.go  main_test.go  render.go  render_human.go  sitar.1  sitar.1.md  sitar.spec  types.go
code/go/debian/: changelog  control  copyright  rules
code/go/independent_tests/: INDEPENDENT_TESTS.go
code/go/translation_report/: translation-workflow.pikchr
code/rs/: Cargo.toml  sitar.1.md
code/rs/.cargo/: config.toml
code/rs/debian/: changelog  control  rules
code/rs/pcd-sonnet-output/: LICENSE  Makefile  README.md  TRANSLATION_REPORT.md  sitar.spec
code/rs/pcd-sonnet-output/debian/: copyright
code/rs/pcd-sonnet-output/independent_tests/: INDEPENDENT_TESTS.rs
code/rs/pcd-sonnet-output/src/: collect_hw.rs  collect_network.rs  collect_pkg.rs  render.rs  render_human.rs  render_json.rs  types.rs
code/rs/src/: collect.rs  collect_config.rs  collect_pkg.rs  collect_storage.rs  detect.rs  interfaces.rs  main.rs
code/rs/translation_report/: translation-workflow.pikchr
code/translation_analysis/: 2026-04-05-01-sitar-translation-analysis.md
spec/: cli-tool.go.milestones.hints.md  cli-tool.rs.milestones.hints.md  cli-tool.template.md  prompt.md  reverse-prompt.md  sitar.implementation.hints.md  sitar.md
